src/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__list_selection_view__tests__list_selection_spacing_with_subtitle.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: render_lines(&view)
---
                                                
  Select Approval Mode                          
  Switch between TokenCode approval presets     
                                                
› 1. Read Only (current)  TokenCode can read    
                          files                 
  2. Full Access          TokenCode can edit    
                          files                 
                                                
  Press enter to confirm or esc to go back
